--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:e2e:watch": "dotenv -e .env.test jest --watch --no-cache --config ./test/jest-e2e.json"
+    "test:e2e:watch": "dotenv -e .env.test jest --watch --no-cache --config ./test/jest-e2e.json",
+    "db:migrate": "npx prisma migrate dev --name init",
+    "db:migrate:test": "npx dotenv -e .env.test -- prisma migrate dev --name init"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
